--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 debug.modulepath=\
     ${run.modulepath}
 debug.test.modulepath=\
@@ -78,7 +79,7 @@ javadoc.encoding=${source.encoding}
 build.test.classes.dir=${build.dir}/test/classes
 jar.index=${jnlp.enabled}
 javac.compilerargs=
-jnlp.codebase.user=http\://shef.sourceforge.net
+jnlp.codebase.user=http://shef.sourceforge.net
 source.encoding=UTF-8
 application.desc=Swing HTML Editor Framework
 jnlp.signing.keystore=
